# backend_crud-api-python-fastapi-mongodb

./: README.md  docker-compose.yml
env/: example.api.env
fastapi/: .env.example  .gitignore  Pipfile  README.md  pylintrc  pyproject.toml  pyproject.toml.example  setup.cfg
fastapi/scripts/: init.sh
fastapi/src/: app.py
fastapi/src/core/: auth.py  exceptions.py
fastapi/src/db/: connection.py
fastapi/src/db/collections/: user.py
fastapi/src/helpers/: container.py
fastapi/src/models/: user.py
fastapi/src/routes/: auth.py  hello_world.py  user.py
fastapi/src/services/logger/implementations/: logger.py
fastapi/src/services/logger/models/: configuration.py
fastapi/tests/: __init__.py
fastapi/tests/core/: test_auth.py
fastapi/tests/routes/: test_auth_routes.py  test_user_routes.py
mongo/: README.md  docker-compose.yml
mongo/docker-entrypoint-initdb.d/: mongo-init.js
