[project]
name = "api_src_cedrata"
version = "0.0.1"
authors = [
    { name = "Luca Cedrata Greggio", email = "greggius9891@gmail.com },
]
description = "Example of REST-API built with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Indipendent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"