[project]
name = "api_src_cedrata"
version = "0.0.1"
authors = [
    { name = "Luca Cedrata Greggio", email = "luca.greggio@protonmail.com" },
]
description = "Example of REST-API built with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Indipendent",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
env_files = ["./env/.env.test"]
markers = ["asyncio: mark a test for an async endpoint"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
